# voice2message_bot

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  UserStatisticsDB.py  config.ini.example  generate_config.py  main.py  pyproject.toml  requirements.txt  telegram_bot.py  video2audio.py  voice2message.py
scripts/: run_local.sh
src/: admin_notifier.rs  chat_completion.rs  config.rs  errors.rs  logger.rs  main.rs  stats.rs  telegram_api.rs  transcription_store.rs  utils.rs  whisper_api.rs
src/bot/: config.py  handlers.py  handlers.rs  keyboards.py  locales.py  main.py  mod.rs  polling.rs  secretary.py
src/bot/services/: audio.py  export.py  notifier.py  summarization.py  transcription.py
src/bot/storage/: statistics.py  transcription_store.py
src/bot/utils/: text.py
src/http/: health.rs  mod.rs
src/storage/: file_store.rs
src/transcriber/: mod.rs  openai.rs  trait.rs
tests/: basic.rs  conftest.py  integration.rs  test_audio.py  test_config.py  test_export.py  test_handlers.py  test_locales.py  test_notifier.py  test_secretary.py  test_statistics.py  test_summarization.py  test_text.py  test_transcription.py  test_transcription_store.py  testaudio
utils/: text_helpers.py
