[package]
name = "voice-transcriber-bot"
version = "0.1.0"
edition = "2021"
authors = ["Voice Transcriber Bot Contributors"]
description = "A Telegram bot that transcribes voice messages using OpenAI Whisper API"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
url = "2.5"
mime = "0.3"
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
